--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.2",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "repository": "https://github.com/digit-map/HD_Keychain",
   "author": "Keith <keithwhisper@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "bundle": "webpack"
+    "build": "tsc --project tsconfig.prod.json",
+    "bundle": "webpack",
+    "test": "jest --coverage"
   },
   "dependencies": {
-    "bn.js": "5.1.1",
+    "bn.js": "4.11.8",
     "elliptic": "6.5.2"
   },
   "devDependencies": {
     "@types/elliptic": "6.4.12",
+    "@types/jest": "25.1.3",
     "@types/node": "13.7.1",
+    "jest": "25.1.0",
+    "ts-jest": "25.2.1",
     "ts-loader": "6.2.1",
     "tslib": "1.10.0",
     "typescript": "3.7.5",
