chore: update keywords

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "@digit-map/hd-keychain",
+  "keywords": [
+    "hd",
+    "keychain",
+    "blockchain",
+    "bip32",
+    "bip39"
+  ],
   "private": false,
   "publishConfig": {
     "access": "public"
