--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "./build",
+    "outDir": "./lib",
     "removeComments": true,
     "importHelpers": true,
     "downlevelIteration": true,
